fix social links

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -12,13 +12,13 @@ import ExpandFooter from "./ExpandFooter.astro";
     class="fixed bottom-0 center left-1/2 -translate-x-1/2 w-[375px] p-4 rounded-t-2xl bg-black text-sm flex align-middle items-center justify-center gap-2 py-3 transition-all duration-300 ease-in-out"
   >
     Join Our Community •
-    <a href="#" class="hover:opacity-80 w-6">
+    <a target="_blank" href="https://x.com/@FiberNW" rel="noopener noreferrer" class="hover:opacity-80 w-6">
       <img src="/icons/social-media/twitter.svg" alt="" />
     </a>
-    <a href="#" class="hover:opacity-80 w-6">
+    <a target="_blank" href="https://github.com/nervosnetwork/fiber" rel="noopener noreferrer" class="hover:opacity-80 w-6">
       <img src="/icons/social-media/github.svg" alt="" />
     </a>
-    <a href="#" class="hover:opacity-80 w-6">
+    <a target="_blank" href="https://substack.com/@ckbecofund" rel="noopener noreferrer" class="hover:opacity-80 w-6">
       <img src="/icons/social-media/substack.svg" alt="" />
     </a>
     © 2025
