--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -108,7 +108,7 @@ const buildCaseList = [
         </div>
         <a
           target="_blank"
-          href="https://fiber-pay-demo.vercel.app/invoices/shopify/5708053708977"
+          href="https://github.com/elizaOS/eliza/pull/2084"
           class="bg-purple-dark text-white px-2 py-4 rounded-3xl w-full flex justify-center items-center align-middle gap-2 cursor-pointer"
         >
           <h4>Demo</h4>
@@ -117,7 +117,7 @@ const buildCaseList = [
       </div>
     </div>
   </div>
-  <ScrollList items={scrollingItems} isPrimary={false} />
+  <ScrollList items={scrollingItems} level="secondary" />
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-20">
     {
