--- a/src/layouts/ExpandFooter.astro
+++ b/src/layouts/ExpandFooter.astro
@@ -7,13 +7,13 @@
   </div>
   <h2>Join Our Community</h2>
   <div class="flex justify-center gap-4 mb-6">
-    <a href="#" class="hover:opacity-80">
+    <a target="_blank" href="https://x.com/@FiberNW" rel="noopener noreferrer" class="hover:opacity-80">
       <img src="/icons/social-media/twitter.svg" alt="" />
     </a>
-    <a href="#" class="hover:opacity-80">
+    <a target="_blank" href="https://github.com/nervosnetwork/fiber" rel="noopener noreferrer" class="hover:opacity-80">
       <img src="/icons/social-media/github.svg" alt="" />
     </a>
-    <a href="#" class="hover:opacity-80">
+    <a target="_blank" href="https://substack.com/@ckbecofund" rel="noopener noreferrer" class="hover:opacity-80">
       <img src="/icons/social-media/substack.svg" alt="" />
     </a>
   </div>
