--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,24 @@ import Navbar from "./Navbar.astro";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+
+		<!-- Primary Meta Tags -->
 		<title>Fiber Network</title>
+		<meta name="description" content="Scaling Satoshi's P2P Ecash Vision" />
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content={Astro.url} />
+		<meta property="og:title" content="Fiber Network" />
+		<meta property="og:description" content="Scaling Satoshi's P2P Ecash Vision" />
+		<meta property="og:image" content="/imgs/open-graph.png" />
+		
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content={Astro.url} />
+		<meta property="twitter:title" content="Fiber Network" />
+		<meta property="twitter:description" content="Scaling Satoshi's P2P Ecash Vision" />
+		<meta property="twitter:image" content="/open-graph.png" />
 	</head>
 	<body class="text-text-primary m-0 w-full h-full bg-gradient-to-b from-purple-light via-cyan-light to-yellow-light">
 		<Navbar />
