fix astor url in metatags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,14 +18,14 @@ import Navbar from "./Navbar.astro";
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content={Astro.url} />
+		<meta property="og:url" content="https://www.fiber.world/" />
 		<meta property="og:title" content="Fiber Network" />
 		<meta property="og:description" content="Scaling Satoshi's P2P Ecash Vision" />
 		<meta property="og:image" content="/imgs/open-graph.png" />
 		
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content={Astro.url} />
+		<meta property="twitter:url" content="https://www.fiber.world/" />
 		<meta property="twitter:title" content="Fiber Network" />
 		<meta property="twitter:description" content="Scaling Satoshi's P2P Ecash Vision" />
 		<meta property="twitter:image" content="/open-graph.png" />
