fix: twitter handle rename

--- a/src/layouts/ExpandFooter.astro
+++ b/src/layouts/ExpandFooter.astro
@@ -7,7 +7,7 @@
   </div>
   <h2>Join Our Community</h2>
   <div class="flex justify-center gap-4 mb-6">
-    <a target="_blank" href="https://x.com/@FiberNW" rel="noopener noreferrer" class="hover:opacity-80">
+    <a target="_blank" href="https://x.com/@FiberDevs" rel="noopener noreferrer" class="hover:opacity-80">
       <img src="/icons/social-media/twitter.svg" alt="" />
     </a>
     <a target="_blank" href="https://github.com/nervosnetwork/fiber" rel="noopener noreferrer" class="hover:opacity-80">
