--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -17,7 +17,7 @@
     <div
       class="bg-purple-dark p-[20px] rounded-xl border-1 border-border-black flex justify-center"
     >
-      <h3>A Programmable P2P Finance Network</h3>
+      <h3 class="text-center">A scalable, privacy-by-default payment & swap network</h3>
     </div>
     <div
       id="cursor-target"
