--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -27,7 +27,7 @@
     <div
       class="order-1 w-full md:order-2 md:w-auto flex-grow bg-purple-dark flex justify-center p-[20px] rounded-xl border-1 border-black"
     >
-      <h3 class="sm:text-center">1/4 Off-Chain Payment Channels</h3>
+      <h3 class="sm:text-center">1 of 4 Off-Chain Payment Channels</h3>
     </div>
 
     <!-- 上一页按钮（移动端第二行左侧） -->
@@ -87,7 +87,7 @@
 
   function updateStep() {
     stepImage.src = steps[currentStep].src;
-    stepText.textContent = `${currentStep + 1}/${steps.length} ${steps[currentStep].title}`;
+    stepText.textContent = `${currentStep + 1} of ${steps.length} ${steps[currentStep].title}`;
     stepDescription.textContent = steps[currentStep].description;
   }
 
