--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,6 +71,10 @@
 	h4 {
 		@apply font-heading font-bold lg:text-[24px] lg:leading-[120%] md:text-[20px] md:leading-[120%] text-[18px] leading-[120%];
 	}
+
+	pre {
+		@apply bg-white rounded-xl px-5;
+	}
 }
 
 @layer utilities {
