--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -10,6 +10,7 @@ const navLinks = [
 ];
 
 const documentMenu = [
+	{ text: "Getting Started", href: "/docs", id: "getting-started" },
 	{
 		text: "Light Paper",
 		href: "https://github.com/nervosnetwork/fiber/blob/main/docs/light-paper.md",
