--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -51,6 +51,11 @@ const techExplanationDocs = [
 		description: "The official invoice protocol for Fiber Network",
 		link: "https://github.com/nervosnetwork/fiber/blob/main/docs/specs/payment-invoice.md",
 	},
+	{
+		title: "Understanding Payment Channel Network",
+		description: "A blog post explaining the payment channel network",
+		link: "https://blog.cryptape.com/understanding-payment-channel-network",
+	},
 ];
 
 const toolList = [
@@ -164,7 +169,8 @@ const networkResources = [
 
     <!-- Development Tools Section -->
     <div class="mb-16">
-      <h3  class="mb-6">Community Development</h3>
+      <h3  class="mb-3">Awesome Fiber</h3>
+      <div class="text-body1 mb-10">A collection of awesome Fiber Network resources from its community.</div>
 
       <h4 class="mb-6">Tools & Examples</h4>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6 pb-6 border-b-1 border-border-black">
