--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -60,26 +60,33 @@ const techExplanationDocs = [
 
 const toolList = [
 	{
-		title: "Fiber Agent",
-		description: "Magic base implementation for Fiber Network",
+		title: "Fiber Agent with Bun.js",
+		description:
+			"A server and CLI tool writing in typescript to manage Fiber Node.",
 		link: "https://github.com/Keith-CY/fiber-agent",
 	},
 	{
-		title: "Testnet Demo",
-		description: "Step-by-step testnet tutorial",
+		title: "ckb-fiber-docker",
+		description:
+			"Docker image that contains Fiber Node and ckb-cli for easy deployment.",
+		link: "https://github.com/Flouse/ckb-fiber-docker",
+	},
+	{
+		title: "Python Testnet Demo",
+		description: "A Step-by-step testnet tutorial written in Python.",
 		link: "https://github.com/gpBlockchain/ckb-fiber-testnet-demo",
 	},
 ];
 
 const testingResources = [
 	{
-		title: "Integration Tests",
-		description: "Comprehensive test cases for Fiber Network",
+		title: "Python Integration Tests",
+		description: "Comprehensive test cases written in Python for Fiber Network",
 		link: "https://github.com/cryptape/ckb-py-integration-test/tree/fiber/test_cases/fiber/devnet",
 	},
 	{
-		title: "E2E Tests",
-		description: "End-to-end test examples",
+		title: "E2E Tests with Bruno",
+		description: "End-to-end test examples inside the Fiber repository.",
 		link: "https://github.com/nervosnetwork/fiber/tree/develop/tests/bruno/e2e",
 	},
 
@@ -122,7 +129,7 @@ const networkResources = [
     <div
       class="bg-purple rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-12"
     >
-      <h4>Complete guide to building and operating on the Fiber Network</h4>
+      <h4>a place to learn and get your hands dirty with Fiber Network. More resources are coming soon.</h4>
     </div>
 
     <!-- Getting Started Section -->
@@ -170,7 +177,7 @@ const networkResources = [
     <!-- Development Tools Section -->
     <div class="mb-16">
       <h3  class="mb-3">Awesome Fiber</h3>
-      <div class="text-body1 mb-10">A collection of awesome Fiber Network resources from its community.</div>
+      <div class="text-body1 mb-10">A collection of awesome Fiber resources from its community.</div>
 
       <h4 class="mb-6">Tools & Examples</h4>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6 pb-6 border-b-1 border-border-black">
@@ -236,7 +243,7 @@ const networkResources = [
         }
       </div>
 
-      <div>stay tuned, more are coming..</div>
+      <div class="text-body1 mb-10">Stay tuned, More are coming!</div>
     </div>
   </div>
 </Layout>
