add simple-game docs

--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 const gettingStartedDocs = [
 	{
 		title: "Running a Fiber Node",
-		description: "learn how to run a testnet node to join the P2P network",
+		description: "learn how to run a testnet node on your local machine",
 		link: "/docs/getting-started/running-node",
 	},
 	{
@@ -18,9 +18,15 @@ const gettingStartedDocs = [
 		link: "/docs/getting-started/transfer-stablecoin",
 	},
 	{
-		title: "Integrate with Nodejs",
-		description: "Learn how to integrate the Fiber Network with Nodejs",
-		link: "/docs/getting-started/integrate-with-nodejs",
+		title: "Build a Game with Fiber",
+		description:
+			"use typescript + phaser.js to build a simple game with Fiber micro-payment",
+		link: "/docs/getting-started/simple-game",
+	},
+	{
+		title: "Testnet Public Nodes User Manual",
+		description: "learn how to connect to the testnet public nodes and do more",
+		link: "https://github.com/sunchengzhu/fiber/blob/develop/docs/testnet-nodes.md",
 	},
 ];
 
