--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -26,7 +26,7 @@ const gettingStartedDocs = [
 	{
 		title: "Testnet Public Nodes User Manual",
 		description: "learn how to connect to the testnet public nodes and do more",
-		link: "https://github.com/sunchengzhu/fiber/blob/develop/docs/testnet-nodes.md",
+		link: "/docs/getting-started/testnet-nodes",
 	},
 ];
 
@@ -197,7 +197,7 @@ const networkResources = [
           ))
         }
       </div>
-      
+
       <h4 class="mb-6">More Resources</h4>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6 pb-6 border-b-1 border-border-black">
         {
