fix test-nodes manul

--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -18,15 +18,15 @@ const gettingStartedDocs = [
 		link: "/docs/getting-started/transfer-stablecoin",
 	},
 	{
+		title: "Connect to Testnet Public Nodes",
+		description: "learn how to connect to the testnet public nodes and do more",
+		link: "/docs/getting-started/testnet-nodes",
+	},
+	{
 		title: "Build a Game with Fiber",
 		description:
 			"use typescript + phaser.js to build a simple game with Fiber micro-payment",
 		link: "/docs/getting-started/simple-game",
-	},
-	{
-		title: "Testnet Public Nodes User Manual",
-		description: "learn how to connect to the testnet public nodes and do more",
-		link: "/docs/getting-started/testnet-nodes",
 	},
 ];
 
