--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -20,7 +20,7 @@ const qaList = [
 ];
 ---
 
-<div class="p-5 md:p-20 mb-20">
+<div class="p-5 md:p-10 lg:p-20 mb-20">
   <div
     class="bg-yellow rounded-xl p-5 mx-auto border-1 border-border-black text-center mb-6"
   >
