--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="rounded-xl p-5 md:p-20 mb-8">
+<div class="rounded-xl p-5 md:p-10 lg:p-20 mb-8">
   <div>
     <h2
       class="bg-blue text-center rounded-xl p-[20px] mb-6 border-1 border-border-black"
@@ -36,7 +36,7 @@
       class="order-2 md:order-1 flex-1 md:flex-initial flex items-center justify-center gap-2 bg-black rounded-xl p-[20px] cursor-pointer"
     >
       <img src="/icons/left.svg" alt="Previous" />
-      <h3 class="hidden md:block">Previous</h3>
+      <h3 class="hidden lg:block">Previous</h3>
     </button>
 
     <!-- 下一页按钮（移动端第二行右侧） -->
@@ -44,7 +44,7 @@
       id="nextButton"
       class="order-3 md:order-3 flex-1 md:flex-initial flex items-center justify-center gap-2 bg-black rounded-xl p-[20px] cursor-pointer"
     >
-      <h3 class="hidden md:block">Next</h3>
+      <h3 class="hidden lg:block">Next</h3>
       <img src="/icons/right.svg" alt="Next" />
     </button>
   </div>
