--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
 @import "tailwindcss";
 
 @font-face {
@@ -35,6 +36,7 @@
 	/* Text Colors */
 	--color-text-primary: #030303;
 	--color-text-secondary: #3d3d3d;
+	--color-text-tertiary: #5d5d5d;
 	--color-text-on-color: #ffffff;
 
 	/* Border Color */
