--- a/src/components/Compare.astro
+++ b/src/components/Compare.astro
@@ -1,4 +1,4 @@
-<div class="p-5 md:p-20 mb-8">
+<div class="p-5 md:p-10 lg:p-20 mb-8">
   <div class="bg-purple border-1 border-border-black p-5 rounded-xl text-center mb-6">
     <h2>Lightning Network vs. Fiber Network</h2>
   </div>
