--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -39,7 +39,7 @@ const futureTimelineData = [
 ];
 ---
 
-<div class="relative px-10 md:px-20">
+<div class="relative px-5 md:px-10 lg:px-20">
   <div>
     <div class="absolute ml-4 z-0 w-[1px] bg-black h-full"></div>
     <ul>
@@ -48,7 +48,7 @@ const futureTimelineData = [
   </div>
 </div>
 
-<div class="relative px-10 md:px-20">
+<div class="relative px-5 md:px-10 lg:px-20">
   <div>
     <div
       class="absolute ml-4 z-0 w-[1px] border-r-1 border-black border-dashed h-full"
