--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -3,38 +3,19 @@ import ExpandFooter from "./ExpandFooter.astro";
 
 const navLinks = [
 	{ text: "About", href: "/", id: "about" },
-	{ text: "Documentation", href: "#documentation", id: "documentation" },
+	{ text: "Documentation", href: "/docs", id: "documentation" },
 	{ text: "Build on Fiber", href: "/build", id: "fiber" },
 	{ text: "Milestones", href: "/milestones", id: "milestones" },
 	{ text: "Hybrid Lightning Network", href: "/network", id: "network" },
 ];
 
-const documentMenu = [
-	{ text: "Getting Started", href: "/docs", id: "getting-started" },
-	{
-		text: "Light Paper",
-		href: "https://github.com/nervosnetwork/fiber/blob/main/docs/light-paper.md",
-	},
-	{
-		text: "RPC Documentation",
-		href: "https://github.com/nervosnetwork/fiber/blob/main/src/rpc/README.md",
-	},
-	{
-		text: "P2P Message Protocol",
-		href: "https://github.com/nervosnetwork/fiber/blob/main/docs/specs/p2p-message.md",
-	},
-	{
-		text: "Invoice Protocol",
-		href: "https://github.com/nervosnetwork/fiber/blob/main/docs/specs/payment-invoice.md",
-	},
-];
 const currentPathname =
 	Astro.url.pathname.endsWith("/") && Astro.url.pathname.length > 1
 		? Astro.url.pathname.slice(0, Astro.url.pathname.length - 1)
 		: Astro.url.pathname;
 ---
 
-<nav class="flex items-center justify-between py-4 px-5 md:px-20">
+<nav class="flex items-center justify-between py-4 px-5 md:px-10 lg:px-20">
   <a href="/" class="text-xl font-bold">
     <img src="/logo/black.svg" alt="Logo" class="h-10" />
   </a>
@@ -42,48 +23,7 @@ const currentPathname =
     {
       navLinks.map((link) => {
         const isActive = currentPathname === link.href;
-        return link.id === "documentation" ? (
-          <li id="doc-li" class="relative">
-            <a
-              href={link.href}
-              class={`nav-link px-4 py-2 rounded-full hover:bg-gray-700 hover:text-white transition-colors duration-200 border-1 border-black ${isActive ? "selected" : ""}`}
-              id={`nav-link-${link.id}`}
-              data-link-id={link.id}
-            >
-              {link.text}
-              <span class="h-4 inline-block items-baseline">
-                <svg
-                  width="18"
-                  height="18"
-                  viewBox="0 0 18 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M9.12486 13.3212L3.92871 5.07115H14.321L9.12486 13.3212Z"
-                    fill="currentColor"
-                  />
-                </svg>
-              </span>
-            </a>
-            <div id="doc-menu" class="absolute hidden">
-              <ul class="w-[285px] bg-yellow border-1 border-border-black rounded-lg shadow-lg py-1">
-                {documentMenu.map((item) => (
-                  <li>
-                    <a
-                      href={item.href}
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="block px-4 py-2 text-gray-800 hover:bg-blue-dark hover:text-white"
-                    >
-                      {item.text}
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            </div>
-          </li>
-        ) : (
+        return (
           <li>
             <a
               href={link.href}
@@ -94,7 +34,7 @@ const currentPathname =
               {link.text}
             </a>
           </li>
-        );
+          )
       })
     }
   </ul>
@@ -133,23 +73,6 @@ const currentPathname =
             >
               {link.text}
             </a>
-            {link.id === "documentation" && (
-              <ul class="ml-2 p-4">
-                {documentMenu.map((item) => (
-                  <li>
-                    <a
-                      href={item.href}
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="flex justify-between hover:bg-yellow hover:text-black p-4"
-                    >
-                      <span>{item.text}</span>
-                      <img class="w-[18px]" src="/icons/link.svg" alt="" />
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            )}
           </li>
         })
       }
@@ -164,20 +87,20 @@ const currentPathname =
 <style>
   /* Default style for all links */
   .nav-link {
-    background-color: black;
-    color: white;
+    background-color: var(--color-black);
+    color: var(--color-text-on-color);
   }
 
   /* Style for the selected link */
   .nav-link.selected {
-    background-color: yellow;
-    color: black;
+    background-color: var(--color-yellow);
+    color: var(--color-text-primary);
     cursor: default;
   }
 
   .mobile-nav-link .selected {
-    background-color: yellow;
-    color: black;
+    background-color: var(--color-yellow);
+    color: var(--color-text-primary);
     cursor: default; 
   }
 </style>
@@ -200,25 +123,6 @@ const currentPathname =
         // Add 'selected' class to the clicked link
         link.classList.add("selected");
 
-        if (link.id === "nav-link-documentation") {
-          event.preventDefault(); // Prevent default link behavior
-          // Toggle the dropdown menu
-          const dropdown = link.nextElementSibling;
-          dropdown?.classList.toggle("hidden");
-
-          const docLi = document.getElementById("doc-li");
-          if (docLi) {
-            docLi.addEventListener("mouseenter", () => {
-              const dropdown = docLi.querySelector("#doc-menu");
-              dropdown?.classList.remove("hidden");
-            });
-
-            docLi.addEventListener("mouseleave", () => {
-              const dropdown = docLi.querySelector("#doc-menu");
-              dropdown?.classList.add("hidden");
-            });
-          }
-        }
       });
     });
 
