--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -1,61 +1,87 @@
 ---
+import AwesomeCard from "../../components/AwesomeCard.astro";
+import ScrollList from "../../components/ScrollList.astro";
+import DocCard from "../../components/DocCard.astro";
 import Layout from "../../layouts/Layout.astro";
+import Button from "../../components/Button.astro";
+
+// TODO: Update Scrolling Behavior
+const scrollingItems = [
+	"Faster",
+	"Cheaper",
+	"P2P",
+	"Multi-Asset Support",
+	"Interoperability",
+	"Faster",
+	"Cheaper",
+	"P2P",
+	"Multi-Asset",
+];
 
 const gettingStartedDocs = [
 	{
-		title: "Running a Fiber Node",
-		description: "learn how to run a testnet node on your local machine",
+		title: "Run a Fiber Node",
+		iconSrc: "node",
+		description: "Learn how to run a Testnet node on your local machine",
 		link: "/docs/getting-started/running-node",
 	},
 	{
-		title: "Basic Example",
-		description: "Learn how to set up and execute transfers between two nodes",
+		title: "Basic Transfer Example",
+		iconSrc: "transfer",
+		description: "Learn how to setup and execute transfers between two nodes",
 		link: "/docs/getting-started/basic-transfer",
 	},
 	{
 		title: "Transfer Stablecoin",
+		iconSrc: "transfer",
 		description: "Learn how to transfer stablecoins between nodes",
 		link: "/docs/getting-started/transfer-stablecoin",
 	},
 	{
-		title: "Connect to Testnet Public Nodes",
-		description: "learn how to connect to the testnet public nodes and do more",
+		title: "Connect Public Nodes",
+		iconSrc: "connect",
+		description: "User manual about how to connect to the public Testnet nodes",
 		link: "/docs/getting-started/testnet-nodes",
 	},
 	{
 		title: "Build a Game with Fiber",
-		description:
-			"use typescript + phaser.js to build a simple game with Fiber micro-payment",
+		iconSrc: "game-white",
+		description: "Build a simple game with Fiber micropayments",
 		link: "/docs/getting-started/simple-game",
 	},
 ];
 
 const techExplanationDocs = [
 	{
-		title: "High-Level Source Code Explained",
+		title: "Architecture & Module",
 		description:
-			"a source code-level exploration of Fiber's architecture and key modules.",
+			"A source code-level exploration of Fiber's architecture and key modules",
 		link: "/docs/tech-explanation/high-level",
+		category: "Tech Explanation",
 	},
 	{
-		title: "Fiber Light Paper",
-		description: "The official light paper for Fiber Network",
+		title: "Light Paper",
+		description: "The official light paper of Fiber network",
 		link: "https://github.com/nervosnetwork/fiber/blob/main/docs/light-paper.md",
+		external: true,
 	},
 	{
 		title: "P2P Message Protocol",
-		description: "The official P2P message protocol for Fiber Network",
+		description: "The official P2P message protocol for Fiber network",
 		link: "https://github.com/nervosnetwork/fiber/blob/main/docs/specs/p2p-message.md",
+		external: true,
 	},
 	{
 		title: "Invoice Protocol",
-		description: "The official invoice protocol for Fiber Network",
+		description: "The official invoice protocol for Fiber network",
 		link: "https://github.com/nervosnetwork/fiber/blob/main/docs/specs/payment-invoice.md",
+		external: true,
 	},
 	{
 		title: "Understanding Payment Channel Network",
 		description: "A blog post explaining the payment channel network",
 		link: "https://blog.cryptape.com/understanding-payment-channel-network",
+		external: true,
 	},
 ];
 
@@ -74,7 +100,7 @@ const toolList = [
 	},
 	{
 		title: "Python Testnet Demo",
-		description: "A Step-by-step testnet tutorial written in Python.",
+		description: "A Step-by-step Testnet tutorial written in Python.",
 		link: "https://github.com/gpBlockchain/ckb-fiber-testnet-demo",
 	},
 ];
@@ -106,13 +132,13 @@ const testingResources = [
 const networkResources = [
 	{
 		title: "Testnet Visualization",
-		description: "Visual representation of the testnet",
+		description: "Visual representation of the Testnet",
 		link: "http://16.162.99.28:8120/view.html",
 		icon: "/icons/network.svg",
 	},
 	{
 		title: "Testnet Explorer",
-		description: "Browse the Fiber testnet",
+		description: "Browse the Fiber Testnet",
 		link: "https://testnet.explorer.nervos.org/fiber/graph/nodes",
 		icon: "/icons/explorer.svg",
 	},
@@ -120,131 +146,66 @@ const networkResources = [
 ---
 
 <Layout>
-  <div class="p-5 md:p-20">
-    <div
-      class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-1"
-    >
-      <h2>Fiber Network Documentation</h2>
+  <div class="p-5 md:p-10 lg:p-20">
+    <div class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-5">
+      <h1>Documentation</h1>
     </div>
 
     <div
-      class="bg-purple rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-12"
+      class="bg-purple-dark text-white rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-12"
     >
-      <h4>a place to learn and get your hands dirty with Fiber Network. More resources are coming soon.</h4>
+      <h3>Explore your go-to resource for learning and building on Fiber Network</h3>
     </div>
 
     <!-- Getting Started Section -->
     <div class="mb-16">
-      <h3 class="mb-6">Getting Started</h3>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+        <div class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-blue-dark text-white border-1 border-border-black`}>
+          <h2>Getting Started</h2>
+        </div>
         {
-          gettingStartedDocs.map((doc) => (
-            <a href={doc.link} class="block">
-              <div class="p-6 bg-white rounded-xl border-1 border-border-black hover:shadow-lg transition-shadow h-full">
-                <div class="flex items-start gap-4">
-                  <div>
-                    <h3 class="text-xl font-semibold mb-2">{doc.title}</h3>
-                    <p class="text-body1">{doc.description}</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          ))
+          gettingStartedDocs.map((doc) => <DocCard {...doc} cardBg="yellow" />)
         }
       </div>
     </div>
 
     <!-- Tech Explanation Section -->
     <div class="mb-16">
-      <h3 class="mb-6">Tech Explanation</h3>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+        <div class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-purple text-primary border-1 border-border-black`}>
+          <h2>Tech Explanation</h2>
+        </div>
         {
-          techExplanationDocs.map((doc) => (
-            <a href={doc.link} class="block">
-              <div class="p-6 bg-white rounded-xl border-1 border-border-black hover:shadow-lg transition-shadow h-full">
-                <div class="flex items-start gap-4">
-                  <div>
-                    <h3 class="text-xl font-semibold mb-2">{doc.title}</h3>
-                    <p class="text-body1">{doc.description}</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          ))
+          techExplanationDocs.map((doc) => <DocCard {...doc} iconSrc="file" cardBg="blue" />)
         }
       </div>
     </div>
+  </div>
 
-    <!-- Development Tools Section -->
-    <div class="mb-16">
-      <h3  class="mb-3">Awesome Fiber</h3>
-      <div class="text-body1 mb-10">A collection of awesome Fiber resources from its community.</div>
+  <!-- TODO: Replace the scrolling behavior -->
+  <ScrollList items={scrollingItems} level="secondary" />
 
-      <h4 class="mb-6">Tools & Examples</h4>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6 pb-6 border-b-1 border-border-black">
-        {
-          toolList.map((tool) => (
-            <a href={tool.link} class="block" target="_blank" rel="noopener">
-              <div class="p-6 bg-white rounded-xl border-1 border-border-black hover:shadow-lg transition-shadow h-full">
-                <div class="flex items-start gap-4">
-                  <div>
-                    <h3 class="text-xl font-semibold mb-2">{tool.title}</h3>
-                    <p class="text-body1">{tool.description}</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          ))
-        }
+ <!-- Awesome Fiber Section -->
+  <div class="p-5 md:p-10 lg:p-20">
+    <div class="p-5 mb-5 rounded-xl flex justify-center align-middle items-start bg-yellow text-primary border-1 border-border-black">
+      <h3>Awesome Fiber &ndash; Community Resources</h3>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+      <AwesomeCard title="Tools & Examples" iconSrc="tool" list={toolList} />
+      <AwesomeCard title="Testing" iconSrc="test" list={testingResources} />
+      <AwesomeCard title="Network & Visualizer" iconSrc="visualizer" list={networkResources} />
+      <div class={`p-5 h-[100%] rounded-xl flex flex-col gap-5 justify-center align-middle items-start bg-purple text-primary border-1 border-border-black`}>
+        <h3>Contribute Your Fiber Creation Today</h3>
+        <Button
+          bg={'bg-cyan'}
+          textColor={'text-primary'}
+          label="Submit"
+          external
+          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
+        />
       </div>
-
-      <h4 class="mb-6">More Resources</h4>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6 pb-6 border-b-1 border-border-black">
-        {
-          testingResources.map((resource) => (
-            <a
-              href={resource.link}
-              class="block"
-              target="_blank"
-              rel="noopener"
-            >
-              <div class="p-6 bg-white rounded-xl border-1 border-border-black hover:shadow-lg transition-shadow h-full">
-                <div class="flex items-start gap-4">
-                  <div>
-                    <h3 class="text-xl font-semibold mb-2">{resource.title}</h3>
-                    <p class="text-body1">{resource.description}</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          ))
-        }
-      </div>
-
-      <h4 class="mb-6">Network Info & Visualization</h4>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6 pb-6 border-b-1 border-border-black">
-        {
-          networkResources.map((resource) => (
-            <a
-              href={resource.link}
-              class="block"
-              target="_blank"
-              rel="noopener"
-            >
-              <div class="p-6 bg-white rounded-xl border-1 border-border-black hover:shadow-lg transition-shadow h-full">
-                <div class="flex items-start gap-4">
-                  <div>
-                    <h3 class="text-xl font-semibold mb-2">{resource.title}</h3>
-                    <p class="text-body1">{resource.description}</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          ))
-        }
-      </div>
-
-      <div class="text-body1 mb-10">Stay tuned, More are coming!</div>
     </div>
   </div>
 </Layout>
