--- a/src/pages/network.astro
+++ b/src/pages/network.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <div class="p-5 md:p-20">
+  <div class="p-5 md:p-10 lg:p-20">
     <div
       class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-6"
     >
