--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,8 @@ import Navbar from "./Navbar.astro";
 				<circle fill="#FFFFFF" stroke="#FFFFFF" stroke-width="4" cx="24" cy="24" r="16"></circle>
 			</svg>
 		</div>
-		<script src="/src/scripts/custom-cursor.js" defer></script>
+		<script src="/scripts/custom-cursor.js" defer></script>
+		<script src="/scripts/copy-code.js" defer></script>
+		<script src="/scripts/generate-toc.js" defer></script>
 	</body>
 </html>
