--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -4,18 +4,6 @@ import ScrollList from "../components/ScrollList.astro";
 import CaseCard from "../components/CaseCard.astro";
 import Button from "../components/Button.astro";
 
-const scrollingItems = [
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset Support",
-	"Interoperability",
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset",
-];
-
 const buildCaseList = [
 	{
 		title: "IoT Payments",
@@ -116,7 +104,8 @@ const buildCaseList = [
       </div>
     </div>
   </div>
-  <ScrollList items={scrollingItems} level="secondary" />
+  
+  <ScrollList />
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-10 lg:p-20">
     {
