--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,27 +6,13 @@ import HowItWorks from "../components/HowItWorks.astro";
 import Features from "../components/Features.astro";
 import Compare from "../components/Compare.astro";
 import FAQ from "../components/FAQ.astro";
-
-const scrollingItems = [
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset Support",
-	"Interoperability",
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset",
-];
 ---
 
 <Layout>
   <Banner />
-  <ScrollList items={scrollingItems} />
   <HowItWorks />
-  <ScrollList items={scrollingItems} level="secondary" />
+  <ScrollList />
   <Features />
   <Compare />
-  <ScrollList items={scrollingItems} level="tertiary" />
   <FAQ />
 </Layout>
