restore the two demo links

--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -75,7 +75,7 @@ const buildCaseList = [
           textColor={'text-white'}
           label="Demo"
           external
-          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
+          link={"https://shopify.com/68516544700/account/orders/203c5c588b047d746ac9613a13e40e93"}
         />
       </div>
 
@@ -99,12 +99,12 @@ const buildCaseList = [
           textColor={'text-white'}
           label="Demo"
           external
-          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
+          link={"https://github.com/elizaOS/eliza/pull/2084"}
         />
       </div>
     </div>
   </div>
-  
+
   <ScrollList />
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-10 lg:p-20">
