--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -4,18 +4,6 @@ import ScrollList from "../components/ScrollList.astro";
 import CaseCard from "../components/CaseCard.astro";
 import Button from "../components/Button.astro";
 
-const scrollingItems = [
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset Support",
-	"Interoperability",
-	"Faster",
-	"Cheaper",
-	"P2P",
-	"Multi-Asset",
-];
-
 const buildCaseList = [
 	{
 		title: "IoT Payments",
@@ -87,7 +75,7 @@ const buildCaseList = [
           textColor={'text-white'}
           label="Demo"
           external
-          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
+          link={"https://shopify.com/68516544700/account/orders/203c5c588b047d746ac9613a13e40e93"}
         />
       </div>
 
@@ -111,12 +99,13 @@ const buildCaseList = [
           textColor={'text-white'}
           label="Demo"
           external
-          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
+          link={"https://github.com/elizaOS/eliza/pull/2084"}
         />
       </div>
     </div>
   </div>
-  <ScrollList items={scrollingItems} level="secondary" />
+
+  <ScrollList />
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 my-8 p-5 md:p-10 lg:p-20">
     {
