refactor: build.page => community.page

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -4,7 +4,7 @@ import ExpandFooter from "./ExpandFooter.astro";
 const navLinks = [
 	{ text: "About", href: "/", id: "about" },
 	{ text: "Documentation", href: "/docs", id: "documentation" },
-	{ text: "Build on Fiber", href: "/build", id: "fiber" },
+	{ text: "Community", href: "/community", id: "community" },
 	{ text: "Milestones", href: "/milestones", id: "milestones" },
 	{ text: "Hybrid Lightning Network", href: "/network", id: "network" },
 ];
