--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -1,9 +1,7 @@
 ---
-import AwesomeCard from "../../components/AwesomeCard.astro";
 import ScrollList from "../../components/ScrollList.astro";
 import DocCard from "../../components/DocCard.astro";
 import Layout from "../../layouts/Layout.astro";
-import Button from "../../components/Button.astro";
 
 const gettingStartedDocs = [
 	{
@@ -71,126 +69,52 @@ const techExplanationDocs = [
 		external: true,
 	},
 ];
-
-const toolList = [
-	{
-		title: "Fiber Agent with Bun.js",
-		description:
-			"A server and CLI tool writing in typescript to manage Fiber Node.",
-		link: "https://github.com/Keith-CY/fiber-agent",
-	},
-	{
-		title: "ckb-fiber-docker",
-		description:
-			"Docker image that contains Fiber Node and ckb-cli for easy deployment.",
-		link: "https://github.com/Flouse/ckb-fiber-docker",
-	},
-	{
-		title: "Python Testnet Demo",
-		description: "A Step-by-step Testnet tutorial written in Python.",
-		link: "https://github.com/gpBlockchain/ckb-fiber-testnet-demo",
-	},
-];
-
-const testingResources = [
-	{
-		title: "Python Integration Tests",
-		description: "Comprehensive test cases written in Python for Fiber Network",
-		link: "https://github.com/cryptape/ckb-py-integration-test/tree/fiber/test_cases/fiber/devnet",
-	},
-	{
-		title: "E2E Tests with Bruno",
-		description: "End-to-end test examples inside the Fiber repository.",
-		link: "https://github.com/nervosnetwork/fiber/tree/develop/tests/bruno/e2e",
-	},
-
-	{
-		title: "Performance Testing",
-		description: "JMeter samples for Fiber performance testing",
-		link: "https://github.com/gpBlockchain/fiber-jmeter-sample.git",
-	},
-	{
-		title: "Stability Testing",
-		description: "Scripts for testing Fiber Network stability",
-		link: "https://github.com/sunchengzhu/fiber-stability-test-nodes",
-	},
-];
-
-const networkResources = [
-	{
-		title: "Testnet Visualization",
-		description: "Visual representation of the Testnet",
-		link: "http://16.162.99.28:8120/view.html",
-		icon: "/icons/network.svg",
-	},
-	{
-		title: "Testnet Explorer",
-		description: "Browse the Fiber Testnet",
-		link: "https://testnet.explorer.nervos.org/fiber/graph/nodes",
-		icon: "/icons/explorer.svg",
-	},
-];
 ---
 
 <Layout>
   <div class="p-5 md:p-10 lg:p-20">
-    <div class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-5">
+    <div
+      class="bg-cyan rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-5"
+    >
       <h1>Documentation</h1>
     </div>
 
     <div
       class="bg-purple-dark text-white rounded-xl p-8 mx-auto border-1 border-border-black text-center mb-12"
     >
-      <h3>Explore your go-to resource for learning and building on Fiber Network</h3>
+      <h3>
+        Explore your go-to resource for learning and building on Fiber Network
+      </h3>
     </div>
 
     <!-- Getting Started Section -->
     <div class="mb-16">
-      
       <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-        <div class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-blue-dark text-white border-1 border-border-black`}>
+        <div
+          class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-blue-dark text-white border-1 border-border-black`}
+        >
           <h2>Getting Started</h2>
         </div>
-        {
-          gettingStartedDocs.map((doc) => <DocCard {...doc} cardBg="yellow" />)
-        }
-      </div>
-    </div>
-
-    <!-- Tech Explanation Section -->
-    <div class="mb-16">
-      
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-        <div class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-purple text-primary border-1 border-border-black`}>
-          <h2>Tech Explanation</h2>
-        </div>
-        {
-          techExplanationDocs.map((doc) => <DocCard {...doc} iconSrc="file" cardBg="blue" />)
-        }
+        {gettingStartedDocs.map((doc) => <DocCard {...doc} cardBg="yellow" />)}
       </div>
     </div>
   </div>
 
   <ScrollList />
-
- <!-- Awesome Fiber Section -->
   <div class="p-5 md:p-10 lg:p-20">
-    <div class="p-5 mb-5 rounded-xl flex justify-center align-middle items-start bg-yellow text-primary border-1 border-border-black">
-      <h3>Awesome Fiber &ndash; Community Resources</h3>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-      <AwesomeCard title="Tools & Examples" iconSrc="tool" list={toolList} />
-      <AwesomeCard title="Testing" iconSrc="test" list={testingResources} />
-      <AwesomeCard title="Network & Visualizer" iconSrc="visualizer" list={networkResources} />
-      <div class={`p-5 h-[100%] rounded-xl flex flex-col gap-5 justify-center align-middle items-start bg-purple text-primary border-1 border-border-black`}>
-        <h3>Contribute Your Fiber Creation Today</h3>
-        <Button
-          bg={'bg-cyan'}
-          textColor={'text-primary'}
-          label="Submit"
-          external
-          link={"https://github.com/nervosnetwork/fiber-website/tree/main/src/pages/docs"}
-        />
+    <!-- Tech Explanation Section -->
+    <div class="mb-16">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
+        <div
+          class={`p-5 h-[212px] md:h-[100%] rounded-xl flex flex-col justify-center align-middle items-start bg-purple text-primary border-1 border-border-black`}
+        >
+          <h2>Tech Explanation</h2>
+        </div>
+        {
+          techExplanationDocs.map((doc) => (
+            <DocCard {...doc} iconSrc="file" cardBg="blue" />
+          ))
+        }
       </div>
     </div>
   </div>
