--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -6,7 +6,7 @@ const navLinks = [
 	{ text: "Documentation", href: "/docs", id: "documentation" },
 	{ text: "Build on Fiber", href: "/build", id: "fiber" },
 	{ text: "Milestones", href: "/milestones", id: "milestones" },
-	{ text: "Hybrid Lightning Network", href: "/network", id: "network" },
+	{ text: "FAQ", href: "/faq", id: "faq" },
 ];
 
 const currentPathname =
