--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import ScrollList from "../components/ScrollList.astro";
 import HowItWorks from "../components/HowItWorks.astro";
 import Features from "../components/Features.astro";
 import Compare from "../components/Compare.astro";
-import FAQ from "../components/FAQ.astro";
+import HybridNetwork from "../components/HybridNetwork.astro";
 ---
 
 <Layout>
@@ -14,5 +14,5 @@ import FAQ from "../components/FAQ.astro";
   <ScrollList />
   <Features />
   <Compare />
-  <FAQ />
+  <HybridNetwork />
 </Layout>
