--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -3,8 +3,7 @@ import ExpandFooter from "./ExpandFooter.astro";
 
 const navLinks = [
 	{ text: "About", href: "/", id: "about" },
-	{ text: "Documentation", href: "/docs", id: "documentation" },
-	{ text: "Community", href: "/community", id: "community" },
+	{ text: "Documentation", href: "https://docs.fiber.world", id: "documentation" },
 	{ text: "Milestones", href: "/milestones", id: "milestones" },
 	{ text: "FAQ", href: "/faq", id: "faq" },
 ];
