refactor: remove docs and community page (#21)
* refactor: remove docs and community page

* point community to fiber docs showcase

* make old links redirect

* remove DocsLayout

* fix: build failed

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -3,8 +3,16 @@ import ExpandFooter from "./ExpandFooter.astro";
 
 const navLinks = [
 	{ text: "About", href: "/", id: "about" },
-	{ text: "Documentation", href: "/docs", id: "documentation" },
-	{ text: "Community", href: "/community", id: "community" },
+	{
+		text: "Documentation",
+		href: "https://docs.fiber.world",
+		id: "documentation",
+	},
+	{
+		text: "Community",
+		href: "https://docs.fiber.world/showcase",
+		id: "community",
+	},
 	{ text: "Milestones", href: "/milestones", id: "milestones" },
 	{ text: "FAQ", href: "/faq", id: "faq" },
 ];
